# precommit-ai

./: Cargo.toml  README.md
.github/workflows/: manual-bump-formula.yml  release.yml
src/: main.rs
src/openai/: mod.rs
